fix: réactivation du scroll sur tout le site (suppression overflow-y: hidden)

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -49,10 +49,3 @@ a {
 html {
   color-scheme: dark;
 }
-
-@media (min-width: 900px) {
-  html, body {
-    overflow-y: hidden;
-    height: 100vh;
-  }
-}
